--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "would_you_rather",
+  "name": "jericbas",
+  "homepage": "https://jericbas.github.io/",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
