--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,20 +1,3 @@
 {
-  "env": {
-    "browser": true,
-    "es6": true,
-    "jest": true,
-    "node": true
-  },
-  "extends": ["eslint:recommended", "plugin:import/recommended"],
-  "overrides": [
-    {
-      "files": ["**/*.svelte"],
-      "processor": "svelte3/svelte3"
-    }
-  ],
-  "parserOptions": {
-    "ecmaVersion": 2019,
-    "sourceType": "module"
-  },
-  "plugins": ["import", "svelte3"]
+  "extends": "next/core-web-vitals"
 }
