--- a/package.json
+++ b/package.json
@@ -1,35 +1,20 @@
 {
-  "name": "jericbas",
-  "homepage": "https://jericbas.github.io/",
-  "version": "0.0.0",
-  "type": "module",
+  "name": "nextjs-ssg",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
-    "check": "svelte-check --tsconfig ./tsconfig.json",
-    "format": "prettier --write \"{public,src}/**/*.{css,html,js,svelte}\"",
-    "lint": "eslint --fix --quiet src --ext .js,.svelte"
-  },
-  "devDependencies": {
-    "@sveltejs/vite-plugin-svelte": "1.0.0-next.49",
-    "@tsconfig/svelte": "^3.0.0",
-    "autoprefixer": "^10.4.7",
-    "eslint": "^8.19.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-svelte3": "^4.0.0",
-    "postcss": "^8.4.14",
-    "prettier": "^2.7.1",
-    "prettier-plugin-svelte": "^2.7.0",
-    "svelte": "^3.48.0",
-    "svelte-check": "^2.7.2",
-    "svelte-preprocess": "^4.10.7",
-    "tailwindcss": "^3.1.2",
-    "tslib": "^2.4.0",
-    "typescript": "^4.7.3",
-    "vite": "^2.9.12"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^6.1.1"
+    "next": "12.2.3",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "eslint": "8.20.0",
+    "eslint-config-next": "12.2.3"
   }
 }
